--- a/configs/envoy_front_proxy.template.yaml
+++ b/configs/envoy_front_proxy.template.yaml
@@ -186,7 +186,11 @@ layered_runtime:
     - name: admin
       admin_layer: {}
 admin:
-  access_log_path: /var/log/envoy/admin_access.log
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: /tmp/admin_access.log
   address:
     socket_address:
       protocol: TCP
