--- a/configs/original-dst-cluster/proxy_config.yaml
+++ b/configs/original-dst-cluster/proxy_config.yaml
@@ -37,7 +37,11 @@ static_resources:
     dns_lookup_family: V4_ONLY
 cluster_manager: {}
 admin:
-  access_log_path: /tmp/admin_access.log
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: /tmp/admin_access.log
   address:
     socket_address:
       address: 127.0.0.1
