--- a/configs/proxy_connect.yaml
+++ b/configs/proxy_connect.yaml
@@ -1,7 +1,11 @@
 # This will proxy CONNECT requests from a downstream connecting on 127.0.0.1:10001
 # to an upstream listening on 127.0.0.1:10002
 admin:
-  access_log_path: /tmp/admin_access.log
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: /tmp/admin_access.log
   address:
     socket_address:
       protocol: TCP
