--- a/configs/terminate_http2_post.yaml
+++ b/configs/terminate_http2_post.yaml
@@ -2,7 +2,11 @@
 # It can be used to test TCP tunneling as described in docs/root/intro/arch_overview/http/upgrades.rst
 # or used to test POST directly, by running `curl -k -v -x 127.0.0.1:10001 https://www.google.com`
 admin:
-  access_log_path: /tmp/admin_access.log
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: /tmp/admin_access.log
   address:
     socket_address:
       protocol: TCP
