--- a/docs/root/configuration/best_practices/_include/edge.yaml
+++ b/docs/root/configuration/best_practices/_include/edge.yaml
@@ -19,7 +19,11 @@ overload_manager:
         value: 0.98
 
 admin:
-  access_log_path: "/var/log/envoy_admin.log"
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: "/var/log/envoy_admin.log"
   address:
     socket_address:
       address: 127.0.0.1
