--- a/docs/root/configuration/http/http_filters/_include/grpc-reverse-bridge-filter.yaml
+++ b/docs/root/configuration/http/http_filters/_include/grpc-reverse-bridge-filter.yaml
@@ -1,5 +1,9 @@
 admin:
-  access_log_path: /dev/stdout
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: /dev/stdout
   address:
     socket_address:
       address: 0.0.0.0
