--- a/docs/root/configuration/http/http_filters/_include/grpc-transcoder-filter.yaml
+++ b/docs/root/configuration/http/http_filters/_include/grpc-transcoder-filter.yaml
@@ -1,5 +1,9 @@
 admin:
-  access_log_path: /tmp/admin_access.log
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: /tmp/admin_access.log
   address:
     socket_address: { address: 0.0.0.0, port_value: 9901 }
 
