--- a/docs/root/start/quick-start/_include/envoy-dynamic-filesystem-demo.yaml
+++ b/docs/root/start/quick-start/_include/envoy-dynamic-filesystem-demo.yaml
@@ -9,7 +9,11 @@ dynamic_resources:
     path: /var/lib/envoy/lds.yaml
 
 admin:
-  access_log_path: "/dev/null"
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: /dev/null
   address:
     socket_address:
       address: 0.0.0.0
