--- a/examples/mysql/envoy.yaml
+++ b/examples/mysql/envoy.yaml
@@ -32,7 +32,11 @@ static_resources:
                 port_value: 3306
 
 admin:
-  access_log_path: "/dev/null"
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: /dev/null
   address:
     socket_address:
       address: 0.0.0.0
