--- a/examples/redis/envoy.yaml
+++ b/examples/redis/envoy.yaml
@@ -31,7 +31,11 @@ static_resources:
                 address: redis_server
                 port_value: 6379
 admin:
-  access_log_path: "/dev/null"
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: /dev/null
   address:
     socket_address:
       address: 0.0.0.0
