--- a/examples/skywalking-tracing/front-envoy-skywalking.yaml
+++ b/examples/skywalking-tracing/front-envoy-skywalking.yaml
@@ -73,7 +73,11 @@ static_resources:
                 address: skywalking-oap
                 port_value: 11800
 admin:
-  access_log_path: "/dev/null"
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: /dev/null
   address:
     socket_address:
       address: 0.0.0.0
