--- a/test/server/config_validation/test_data/runtime_config.yaml
+++ b/test/server/config_validation/test_data/runtime_config.yaml
@@ -20,7 +20,11 @@ static_resources:
               typed_config:
                 "@type": type.googleapis.com/google.protobuf.Struct
 admin:
-  access_log_path: "/dev/null"
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: "/dev/null"
   address:
     socket_address:
       address: 0.0.0.0
