--- a/examples/csrf/samesite/front-envoy.yaml
+++ b/examples/csrf/samesite/front-envoy.yaml
@@ -14,8 +14,7 @@ static_resources:
           access_log:
             - name: envoy.access_loggers.file
               typed_config:
-                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
-                path: "/dev/stdout"
+                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.StdoutAccessLog
           route_config:
             name: local_route
             virtual_hosts:
