--- a/source/extensions/access_loggers/common/BUILD
+++ b/source/extensions/access_loggers/common/BUILD
@@ -23,6 +23,17 @@ envoy_cc_library(
 )
 
 envoy_cc_library(
+    name = "file_access_log_lib",
+    srcs = ["file_access_log_impl.cc"],
+    hdrs = ["file_access_log_impl.h"],
+    # The file based access logger is core code.
+    visibility = ["//visibility:public"],
+    deps = [
+        ":access_log_base",
+    ],
+)
+
+envoy_cc_library(
     name = "grpc_access_logger",
     hdrs = ["grpc_access_logger.h"],
     deps = [
