--- a/test/common/access_log/BUILD
+++ b/test/common/access_log/BUILD
@@ -14,6 +14,8 @@ envoy_cc_test(
     deps = [
         "//source/common/access_log:access_log_lib",
         "//source/extensions/access_loggers/file:config",
+        "//source/extensions/access_loggers/stderr:config",
+        "//source/extensions/access_loggers/stdout:config",
         "//source/extensions/access_loggers/grpc:http_config",
         "//source/extensions/access_loggers/grpc:tcp_config",
         "//test/common/stream_info:test_util",
