--- a/docs/root/configuration/http/http_filters/_include/grpc-reverse-bridge-filter.yaml
+++ b/docs/root/configuration/http/http_filters/_include/grpc-reverse-bridge-filter.yaml
@@ -19,7 +19,7 @@ static_resources:
           access_log:
           - name: envoy.access_loggers.file
             typed_config:
-              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.StdoutAccessLog
+              "@type": type.googleapis.com/envoy.extensions.access_loggers.stdout.v3.StdoutAccessLog
           stat_prefix: ingress_http
           route_config:
             name: local_route
