--- a/examples/dynamic-config-cp/Dockerfile-control-plane
+++ b/examples/dynamic-config-cp/Dockerfile-control-plane
@@ -1,7 +1,7 @@
 FROM golang
 
 RUN apt-get -y update && apt-get install -y -qq --no-install-recommends netcat
-RUN git clone https://github.com/envoyproxy/go-control-plane
+RUN git clone -b udpa-xds https://github.com/phlax/go-control-plane
 ADD ./resource.go /go/go-control-plane/internal/example/resource.go
 RUN cd go-control-plane && make bin/example
 WORKDIR /go/go-control-plane
