--- a/examples/udp/envoy.yaml
+++ b/examples/udp/envoy.yaml
@@ -28,3 +28,10 @@ static_resources:
               socket_address:
                 address: service-udp
                 port_value: 5005
+
+admin:
+  access_log_path: "/dev/null"
+  address:
+    socket_address:
+      address: 0.0.0.0
+      port_value: 10001
