--- a/test/extensions/access_loggers/open_telemetry/BUILD
+++ b/test/extensions/access_loggers/open_telemetry/BUILD
@@ -54,8 +54,8 @@ envoy_extension_cc_test(
     srcs = ["config_test.cc"],
     extension_name = "envoy.access_loggers.open_telemetry",
     deps = [
+        "//source/extensions/access_loggers/open_telemetry:access_log_lib",
         "//source/extensions/access_loggers/open_telemetry:config",
-        # "//source/extensions/access_loggers/open_telemetry:access_log_lib",
         "//test/mocks/server:factory_context_mocks",
         "@envoy_api//envoy/extensions/access_loggers/grpc/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/access_loggers/open_telemetry/v3alpha:pkg_cc_proto",
