--- a/docs/root/intro/arch_overview/advanced/matching/_include/complicated.yaml
+++ b/docs/root/intro/arch_overview/advanced/matching/_include/complicated.yaml
@@ -30,6 +30,7 @@ static_resources:
                               numerator: 0
                               denominator: HUNDRED
                       matcher:
+                        # The top level matcher is a matcher tree which conceptually selects one of several subtrees.
                         matcher_tree:
                           input:
                             name: request-headers
@@ -40,7 +41,9 @@ static_resources:
                             # Note this additional indirection; this is a workaround for Protobuf oneof limitations.
                             map:
                               some_value_to_match_on: # This is the header value we're trying to match against.
+                                # The OnMatch resulting on matching with this branch of the exact matcher is another matcher, allowing for recursive matching.
                                 matcher:
+                                  # The inner matcher is a matcher list, which attempts to match a list of predicates.
                                   matcher_list:
                                     matchers:
                                       - predicate:
