--- a/source/extensions/http/original_ip_detection/custom_header/BUILD
+++ b/source/extensions/http/original_ip_detection/custom_header/BUILD
@@ -13,7 +13,7 @@ envoy_cc_library(
     name = "custom_header_lib",
     srcs = ["custom_header.cc"],
     hdrs = ["custom_header.h"],
-    # This extensions is core code.
+    # This extension is used from core tests.
     visibility = ["//visibility:public"],
     deps = [
         "//include/envoy/http:original_ip_detection_interface",
