--- a/.coveragerc
+++ b/.coveragerc
@@ -1,10 +1,11 @@
 [run]
 omit =
-	tools/*
+     tools/
+     */pytest_*.py
 
 [report]
 exclude_lines =
-	pragma: no cover
-	raise NotImplementedError
-	pass
-	if __name__ == .__main__.:
+        pragma: no cover
+        raise NotImplementedError
+        pass
+        if __name__ == .__main__.:
