--- a/test/common/http/BUILD
+++ b/test/common/http/BUILD
@@ -52,27 +52,32 @@ envoy_cc_test(
 envoy_cc_test(
     name = "codec_client_test",
     srcs = ["codec_client_test.cc"],
-    deps = [
-        ":common_lib",
-        "//source/common/buffer:buffer_lib",
-        "//source/common/event:dispatcher_lib",
-        "//source/common/http:codec_client_lib",
-        "//source/common/http:exception_lib",
-        "//source/common/network:utility_lib",
-        "//source/common/stream_info:stream_info_lib",
-        "//source/common/upstream:upstream_includes",
-        "//source/common/upstream:upstream_lib",
-        "//test/common/upstream:utility_lib",
-        "//test/mocks:common_lib",
-        "//test/mocks/event:event_mocks",
-        "//test/mocks/http:http_mocks",
-        "//test/mocks/network:network_mocks",
-        "//test/mocks/ssl:ssl_mocks",
-        "//test/mocks/upstream:cluster_info_mocks",
-        "//test/test_common:environment_lib",
-        "//test/test_common:network_utility_lib",
-        "//test/test_common:utility_lib",
-    ],
+    deps =
+        envoy_select_enable_http3([
+            "//test/common/quic:quic_test_utils_for_envoy_lib",
+            "//source/common/quic:envoy_quic_connection_helper_lib",
+            "//source/common/quic:envoy_quic_alarm_factory_lib",
+        ]) + [
+            ":common_lib",
+            "//source/common/buffer:buffer_lib",
+            "//source/common/event:dispatcher_lib",
+            "//source/common/http:codec_client_lib",
+            "//source/common/http:exception_lib",
+            "//source/common/network:utility_lib",
+            "//source/common/stream_info:stream_info_lib",
+            "//source/common/upstream:upstream_includes",
+            "//source/common/upstream:upstream_lib",
+            "//test/common/upstream:utility_lib",
+            "//test/mocks:common_lib",
+            "//test/mocks/event:event_mocks",
+            "//test/mocks/http:http_mocks",
+            "//test/mocks/network:network_mocks",
+            "//test/mocks/ssl:ssl_mocks",
+            "//test/mocks/upstream:cluster_info_mocks",
+            "//test/test_common:environment_lib",
+            "//test/test_common:network_utility_lib",
+            "//test/test_common:utility_lib",
+        ],
 )
 
 envoy_proto_library(
