--- a/test/common/upstream/BUILD
+++ b/test/common/upstream/BUILD
@@ -55,6 +55,7 @@ envoy_cc_test(
         ":test_cluster_manager",
         "//source/common/router:context_lib",
         "//source/extensions/transport_sockets/tls:config",
+        "//test/mocks/protobuf:protobuf_mocks",
         "//test/mocks/upstream:cds_api_mocks",
         "//test/mocks/upstream:cluster_priority_set_mocks",
         "//test/mocks/upstream:cluster_real_priority_set_mocks",
